<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmaretParentalCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Child</string>
    <string name="action_msg">Make Announcement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="dummy_name">Ahmad</string>
    <string name="dummy_location">Ichra, Lahore</string>
    <string name="dummy_stats">Call: 13 | SMS: 29</string>
    <string name="text_report">Reports</string>
    <string name="text_block">Block Service</string>
    <string name="text_call">Call</string>
    <string name="text_sms">SMS</string>
    <string name="text_app">Apps</string>
    <string name="text_screen">Screen</string>
    <string name="summary_text_block_call">Block Outgoing Calls</string>
    <string name="summary_text_block_sms">Block Outgoing SMS</string>
    <string name="summary_text_block_app">Block Applications</string>
    <string name="summary_text_block_screen">Block Screen Input</string>
    <string name="summary_text_report_call">View Calling Details</string>
    <string name="summary_text_report_sms">View SMS Details</string>
    <string name="summary_text_report_app">View Apps Usage Details</string>
    <string name="summary_text_report_screen">View Screen Usage Details</string>
    <string name="text_ch_phn">Child \'s contact number</string>
    <string name="text_generate_key">Generate Key</string>
    <string name="child_number">child name</string>
    <string name="title_activity_create_accout">CreateAccout</string>
    <string name="title_activity_verification">Verification</string>
    <string name="verify_text">Verify</string>
    <string name="Child_Name">Name</string>
    <string name="Add">Add</string>
    <string name="TakenewPhoto">Take new Photo</string>
    <string name="selectFromGallery">Select From Gallery</string>
    <string name="Addpicture">Add Picture</string>
    <string name="title_activity_child_first_screen">ChildFirstScreen</string>
    <string name="Send">Send</string>
    <string name="msg"></string>
    <string name="reply">Reply</string>
    <string name="text_strat_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="text_select_days">Select Days</string>
    <string name="text_complete_week">Complete Week</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tueday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_thinking_what">What are you thinking todo..?</string>
    <string name="text_subject">Subject</string>
    <string name="text_announce">Announce It</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    
    
    
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_activity_set_prefs">Set Prefs</string>
    <string name="title_activity_show_prefs">Show Prefs</string>
    <string name="title_activity_second_main">Second Main Activity</string>
    <string name="title_activity_block_time">Block Time Activity</string>
    <string name="title_activity_call_record">Call Record</string>
    <string name="title_activity_sms_record">SMS Record</string>
    <string name="title_activity_screen_record">Screen Record</string>
   <string name="title_activity_make_annoouncement">Make Announcement</string>
   <string name="title_activity_app_record">App Record</string>
   
</resources>
