<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smaretparentalcare.MakeAnnouncement" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp" >

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_subject"
        android:ems="10" >
    </EditText>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
         android:gravity="top"
        android:layout_height="match_parent"
        android:layout_below="@id/subject"
        
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/text_thinking_what"
        android:inputType="textMultiLine" />
</RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
		android:background="@drawable/customview_background"
        android:layout_marginBottom="30dp"
        android:text="@string/text_announce" />

</RelativeLayout>
